--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,11 @@
 if (NOT PICO_NO_HARDWARE)
-    add_subdirectory(ultrasonic)
+    include(FreeRTOS_Kernel_import.cmake)
+
     add_subdirectory(Examples)
+    add_subdirectory(irline)
+    add_subdirectory(magnometer)
+    add_subdirectory(motor)
+    add_subdirectory(ultrasonic)
+    add_subdirectory(wifi)
 
 endif ()
