--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 if (NOT PICO_NO_HARDWARE)
     include(FreeRTOS_Kernel_import.cmake)
 
+    add_subdirectory(encoder)
     add_subdirectory(Examples)
     add_subdirectory(irline)
     add_subdirectory(magnometer)
